--- a/docker/frontend/node/Dockerfile
+++ b/docker/frontend/node/Dockerfile
@@ -8,4 +8,4 @@ USER node
 
 HEALTHCHECK --interval=5s --timeout=5s --start-period=1s CMD curl --fail http://127.0.0.1:3000/health || exit 1
 
-RUN npm install
+CMD ["npm", "install"]
